# llm-cost

./: .gitignore  README.md  pyproject.toml
docs/: show-and-tell-post.md
llm_cost/: __init__.py  cli.py  inline.py  prices.yaml  pricing.py  summary.py
prompts/: 260424-2057-gemini-audio-pricing.yaml
tests/: conftest.py  test_cli.py  test_inline.py  test_pricing.py  test_summary.py
