[project]
name = "llm-cost"
version = "0.1a0"
description = "Token and spend reports over the llm logs database"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Oliver George" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "llm",
    "click",
    "sqlite-utils>=3.37",
    "pyyaml",
]

[project.entry-points.llm]
llm_cost = "llm_cost"

[project.urls]
Issues = "https://github.com/olivergeorge/llm-cost/issues"

[tool.uv.sources]
llm = { path = "../llm", editable = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
